2006-03-17  Per Bothner  <per@bothner.com>

	* AttributeType.java (make(Symbol)): New facory method.
	* ElementType.java (make(Symbol)): New facory method.

	* XMLParser.java: Also implement org.xml.sax.Locator.
	(getName): Remove method.
	(getPublicId, getSystemId): New methods, impleementing Locator.
	(getLineNumber, getColumnNumber): Change to be consistent with SAX.	

2006-03-15  Per Bothner  <per@bothner.com>

	* ProcessingInstructionType.java: New class extends NodeType.
	* Makefile.am: Update accordingly.
	* MakeProcInst.java: New extends NodeConstructor.  Re-write
	accordingly.  Add some XQuery-required error checking.

2006-03-14  Per Bothner  <per@bothner.com>

	* StringValue.java: New class, some parts moved from gnu.xquery.utils.
	* CommentConstructor.java: No longer need to import StringValue.
	* MakeCDATA.java: Likewise.
	* MakeText.java: Likewise.

	* Document.java (parseCached, availableCached): Fixes needed for
	XPath/XQuery semantics.

	* KNode.java (atomicValue): Moved here from  gnu.xquery.util.NodeUtils.
	Kludge to create UntypedAtomic.

	* UntypedAtomic.java: New class.
	* XDataType.java: New class, extends gnu.bytecode.Type.
	* XTimeType.java: New class, extends XDataType.
	* XIntegerType.java: New class, extends XDataType.
	* XInteger.java: New class, extends gnu.math.IntNum.
	* Makefile.am (java_sources): Update accordingly.

2006-03-01  Per Bothner  <per@bothner.com>

	* SortNodes.java (compile): Don't canonicalize result, if target
	is ConsumerTarget or a StackTarget that takes a Values subtype.

2006-02-16  Per Bothner  <per@bothner.com>

	* Nodes.java (item): Fix bad recursion.
	Only include if use:org.w3c.dom.Node PreProcess-flag is given.

2006-02-16  Per Bothner  <per@bothner.com>

	* AttributeType.java: Fix tabs/spacing to PreProcess works properly,
	* ElementType.java: Likewise.

2006-02-05  Per Bothner  <per@bothner.com>

	* WriteTo.java (writeToIfChange): New static method and field.
	(ifChanged): New flag.
	(apply2): Use it.
